--- a/app/src/main/res/layout/activity_final.xml
+++ b/app/src/main/res/layout/activity_final.xml
@@ -10,11 +10,19 @@
     tools:context=".FinalActivity">
 
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:background="@color/red_light" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:orientation="horizontal">
 
+        <View
+            android:layout_width="6dp"
+            android:layout_height="match_parent"
+            android:background="@color/red_light" />
         <ImageButton
             android:layout_width="247dp"
             android:layout_height="match_parent"
@@ -24,16 +32,25 @@
             android:src="@drawable/waze_open_map" />
 
         <TextView
-            android:layout_width="123dp"
+            android:layout_width="110dp"
             android:layout_height="match_parent"
             android:background="@color/teal_700"
             android:gravity="center"
+            android:onClick="openMap"
             android:text="GO\nTO\nMAP"
             android:textColor="@color/white"
             android:textSize="22sp"
-            android:onClick="openMap"
             android:textStyle="bold" />
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/red_light" />
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:background="@color/red_light" />
     <ScrollView
         android:layout_width="match_parent"
         android:id="@+id/wholeScreen"
